<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">MobileSafer</string>
    <string name="safer_version">版本名</string>
    <string name="version_update">版本更新</string>
    <string name="confirm_update">立即更新</string>
    <string name="cancel_update">取消更新</string>
    <string name="function_title">功能列表</string>
    <string name="welcome_safer">主银，我是您的手机小卫士</string>

    <string name="setting_centre">设置中心</string>
    <string name="app_manager">应用程序管理</string>

    <string name="auto_update">自动更新设置</string>
    <string name="auto_update_on">自动更新设置已打开</string>
    <string name="auto_update_off">自动更新设置已关闭</string>

    <string name="mobile_location">电话归属地的显示设置</string>
    <string name="mobile_location_on">电话归属地的显示设置已打开</string>
    <string name="mobile_location_off">电话归属地的显示设置已关闭</string>

    <string name="location_style">号码归属地设置</string>
    <string name="location_style_on">号码归属地设置已打开</string>
    <string name="location_style_off">号码归属地设置已关闭</string>

    <string name="black_block_list">黑名单拦截设置</string>
    <string name="black_block_list_on">黑名单拦截设置已打开</string>
    <string name="black_block_list_off">黑名单拦截设置已关闭</string>

    <string name="programmer_lock">程序锁设置</string>
    <string name="programmer_lock_on">程序锁设置已打开</string>
    <string name="programmer_lock_off">程序锁设置已关闭</string>

    <string name="progress_used">已用</string>
    <string name="progress_free">可用</string>
    <string name="memory_title">内存：</string>
    <string name="sd_memory_title">SD卡：</string>
    <string name="app_type_system">内存</string>
    <string name="app_type_sd">SD卡</string>
    <string name="application_count">应用程序(<xliff:g id="USER_APP_COUNTE">%1$s</xliff:g>)个</string>
    <string name="user_application">用户程序(<xliff:g id="USER_APP_COUNTE">%1$s</xliff:g>)个</string>
    <string name="system_application">系统程序(<xliff:g id="SYSTEM_APP_COUNTE">%1$s</xliff:g>)个</string>
    <string name="rating_view_title1">安装包</string>
    <string name="rating_view_title2">多媒体</string>
    <string name="rating_view_title3">图片</string>
    <string name="rating_view_title4">缓存</string>
    <string name="viewpager_welcome_title">1.欢迎使用手机防盗功能</string>
    <string name="viewpager_simbind_title">手机卡绑定</string>
    <string name="viewpager_simbind_button">绑定SIM卡</string>
    <string name="viewpager_simbind_content">绑定SIM卡之后，若再次重启手机之后，SIM卡信息发生变更，手机卫士会自动发送报警短信给安全联系人</string>
    <string name="viewpager_number_title">选择安全联系人</string>
    <string name="viewpager_done_title">恭喜！设置完成</string>
    <string name="viewpager_done_button">您的手机防盗保护已开启</string>
    <string name="viewpager_guard">手机防盗向导</string>
    <string name="viewpager_guard_item1">SIM卡变更</string>
    <string name="viewpager_guard_item2">GPS追踪</string>
    <string name="viewpager_guard_item3">远程数据销毁</string>
    <string name="viewpager_guard_item4">远程锁屏</string>
    <string name="blacknumber_title">黑名单设置</string>
    <string name="noblacknumber_message">您还没有添加黑名单</string>
    <string name="et_blacknumber_hint">请输入需要添加的号码</string>
    <string name="et_blackname_hint">请输入名称</string>
    <string name="cb_black_message">拦截短信</string>
    <string name="cb_black_call">拦截电话</string>
    <string name="block_isnull">号码和名称不能为空</string>
    <string name="block_type_isnull">请选择拦截方式</string>
    <string name="block_isExist">该号码已经被添加黑名单</string>
    <string name="setup_password_title">设置密码</string>
    <string name="setup_password">请输入密码</string>
    <string name="setup_password_confirm">请再次输入密码</string>
    <string name="button_confirm">确定</string>
    <string name="button_cancel">取消</string>
    <string name="password_confilct">两次输入的密码不一致</string>
    <string name="password_error">密码输入错误！</string>



</resources>
