<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="260dp"
    android:layout_height="180dp"
    android:layout_gravity="center"
    android:background="@drawable/conor_bg_white">
    <TextView
        android:id="@+id/insertpassword_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:text="@string/setup_password_title"/>
    <EditText
        android:id="@+id/et_insert_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:textSize="14sp"
        android:background="@drawable/coner_white_rec"
        android:hint="@string/setup_password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_insert_confim"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"/>
        <Button
            android:id="@+id/btn_insert_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"/>

    </LinearLayout>

</LinearLayout>